BB-4205: Fix home page styles - Fixed bug with horizontal scroll bar on home page - Fixed styles for .embedded-list__label

--- a/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/scss/components/embedded-list/embedded-list.scss
+++ b/src/OroB2B/Bundle/FrontendBundle/Resources/public/default/scss/components/embedded-list/embedded-list.scss
@@ -4,8 +4,6 @@
     &__label {
         position: relative;
 
-        margin-left: -42px;
-        margin-right: -42px;
         margin-top: 52px;
 
         line-height: 20px;
